# NewsLens

./: .gitignore  CHANGELOG.md  README.md  index.html  install.sh  package-lock.json  package.json  start.sh
.github/workflows/: ci.yml  release.yml
Casks/: newslens.rb
scripts/: install-hooks.sh  pre-commit.sh
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: agent.rs  chat.rs  client.rs  fetch_job.rs  mod.rs  topic_creator.rs
src-tauri/src/commands/: chat.rs  checklist.rs  events.rs  focus_points.rs  market.rs  mod.rs  scheduler.rs  settings.rs  stats.rs  topics.rs  updates.rs
src-tauri/src/db/: connection.rs  models.rs
src-tauri/src/db/queries/: chat_messages.rs  checklist.rs  focus_points.rs  market_symbols.rs  mod.rs  news_events.rs  run_logs.rs  settings.rs  topics.rs  updates.rs
src-tauri/src/notifier/: discord.rs  lark.rs  mod.rs  slack.rs  system.rs  telegram.rs
src-tauri/src/scheduler/: engine.rs  job.rs  mod.rs
src/components/chat/: ChatDrawer.tsx
src/components/layout/: Sidebar.tsx
src/components/modals/: CreateTopicModal.tsx
src/components/topic/: ChecklistPanel.tsx  FocusPointsPanel.tsx  MarketTab.tsx  StatisticsTab.tsx  (+1 more)
src/context/: ThemeContext.tsx
src/hooks/: useTauriEvents.ts
src/lib/: queries.ts  tauri.ts
src/pages/: ArchivePage.tsx  HomePage.tsx  SettingsPage.tsx  StatisticsPage.tsx  TopicDetailPage.tsx
src/store/: ui.ts
src/styles/: globals.css
