[package]
name = "newslens"
version = "0.1.1"
description = "NewsLens - AI-powered desktop news monitor"
authors = ["you"]
edition = "2021"

[lib]
name = "newslens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-cron-scheduler = "0.13"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
croner = "2.2.0"
thiserror = "2"
async-trait = "0.1"
